Call C preprocessor with -P option due to changed behaviour in GCC 4.5

http://bugs.freedesktop.org/show_bug.cgi?id=32701
http://bugs.gentoo.org/show_bug.cgi?id=347758

Signed-off-by: Ulrich Mueller <ulm@gentoo.org>
Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>